style.css
body {
    font-family:Arial, Helvetica, sans-serif;
    margin: 0;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    
}

ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.header, .container-a {
    background-color: #1f2937;
    display: flex;
    padding: 20px 200px;
    
}    

.header {
    justify-content: space-between;
    
}

.heading-left {
    font-size: 24px;
    color: #f9faf8;
}

.heading-right {
    display: flex;
    color: #e5e7eb;
    font-size: 18px;
    gap: 20px;
}

.container-a {
    padding-top: 100px;
    padding-bottom: 100px;
}

.container-a-left {
    margin-right: 50px;
}
.title-a {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}

.content-a {
    font-size: 18px;
    color: #e5e7eb;
    margin-top: 6px;
    
}

button {
    background-color: #3882f6;
    color: #f9faf8;
    text-align: center;
    border-radius: 8px;
    margin-top: 15px;
    padding: 5px 20px;
    font-weight: normal;
    border: none;
    font-size: 18px;
}

.container-a-right { /*Follow up on this item, it doesn't align center*/
    display: flex;
    width: 500px;
    height: 200px;
    background-color: rgb(119, 119, 119);
    align-items: center;
    justify-content: center;
    color: #f9faf8;
    flex-shrink: 0;

}

.container-b {
    /*display: flex;
    flex-direction: column;
    padding: 20px 300px;*/
    margin-bottom: 50px;
}

.container-b-heading {
    font-size: 36px;
    font-weight: bolder;
    align-items: center;
    justify-content: center;
    color: #1f2937;
    display: flex;
    padding: 30px;
}

.container-b-row {
    display: flex;
    justify-content: center;
    gap: 10px;
    /*padding: 20px 100px;*/
    flex-shrink: 0;
    margin: 0 25%;

}

.container-b-column {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
} 

.image-b {
    display: flex;
    width: 100px;
    height: 100px;
    border-width: 2px;
    border-style: solid;
    border-color: #3882f6;
    border-radius: 8px;
    
    align-items: center;
    text-align: center;
    
    
    /*flex-shrink: 0;*/
}

.desc-b {
    justify-content: center;
    align-items: center;
    padding: 5px 0;
    display: flex;
    flex-wrap: wrap;
    text-align: center;
    font-size: 12px;
    color: #515b69;
}

.box-text {
    justify-content: center;
    align-items: center;
    display: flex;
}

.section-c {
    display: flex;
    padding:50px 25%  ;
    background-color: #e5e7eb;
    flex-direction: column;
    gap: 20px;

}

.quote {
    font-size: 36px;
    font-style: italic;
    color: #59677a;
}

.author {
    font-size: 22px;
    font-weight: bold;
    margin-left:auto;
}

.section-d {
    display:flex;
    background-color: #3882f6;
    margin: 50px 20%;
    padding: 50px;
    border-radius: 8px;
    color: #e5e7eb;
    justify-content: space-between;
}

.title-d {
    font-weight: bold;
    font-size: 20px;
}
.content-d {
    padding-right: 50px;
}

.right-d-button {
    border: 2px solid white;
    border-color: white;
    flex-shrink: 0;
    flex-grow: 0;
    align-items: center;
    margin: 0;
    width: 125px;
    height: 35px;
}

.footer {
    display: flex;
    background-color: #1f2937;
    justify-content: center;
    color: #e5e7eb;
    padding: 30px;
    
}

